Add responsive styles

--- a/css/style.css
+++ b/css/style.css
@@ -135,25 +135,27 @@ input:-webkit-autofill:focus {
 /* CARD */
 
 
-.card-recipe__heading {
-  margin: 0;
-  margin-bottom: 24px;
-  font-family: var(--heading-font);
-  font-weight: 400;
-  font-size: 40px;
-  line-height: 40px;
-  color: var(--dark-chorcoal);
-}
-
-.card-recipe__description {
-  margin-bottom: 32px;
-}.card-recipe {
+.card-recipe {
   width: 100%;
   max-width: 736px;
   margin-top: 123px;
   padding: 40px;
   background-color: #fff;
   border-radius: 24px;
+}
+
+.card-recipe__heading {
+  margin: 0;
+  margin-bottom: 24px;
+  font-family: var(--heading-font);
+  font-weight: 400;
+  font-size: 40px;
+  line-height: 1;
+  color: var(--dark-chorcoal);
+}
+
+.card-recipe__description {
+  margin-bottom: 32px;
 }
 
 .card-recipe__img {
@@ -279,8 +281,7 @@ input:-webkit-autofill:focus {
 
 
 /* CARD-RECIPE__NUTRITON */
-.card-recipe__nutrition {
-}
+
 .card-recipe__nutrition-heading {
   margin-bottom: 24px;
   font-family: var(--heading-font);
@@ -337,4 +338,34 @@ only screen and (        min-device-pixel-ratio: 2),
 only screen and (                min-resolution: 192dpi),
 only screen and (                min-resolution: 2dppx) {
 
+}
+
+/* RESPONSIVE */
+
+@media only screen and (max-width:650px) {
+  .card-recipe {
+    padding: 0;
+    border-radius: 0;
+    margin: 0;
+  }
+
+  .card-recipe__img {
+    border-radius: 0;
+    height: auto;
+  }
+
+  .card-recipe__inner {
+    padding: 40px 32px;
+  }
+}
+
+@media only screen and (max-width:650px) {
+  .card-recipe__heading {
+    font-size: 36px;
+    margin-bottom: 24px;
+  }
+
+  .card-recipe__time {
+    padding: 24px;
+  }
 }
